--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -9,20 +9,20 @@
     "storybook.js"
   ],
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.35.6",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
-    "@vercel/style-guide": "^5.2.0",
-    "eslint-config-next": "^14.2.3",
-    "eslint-config-turbo": "^1.13.3",
+    "@tanstack/eslint-plugin-query": "^5.17.20",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "@vercel/style-guide": "^5.1.0",
+    "eslint-config-next": "^14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-turbo": "^1.11.3",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-storybook": "^0.6.15",
-    "typescript": "^5.4.5",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-config-prettier": "^9.1.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.15",
+    "typescript": "^5.3.3"
   }
 }
