--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,9 +36,11 @@
   "dependencies": {
     "@hcc/icons": "workspace:^",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@vanilla-extract/css": "^1.14.0",
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.5"
+    "framer-motion": "^11.0.5",
+    "react-hook-form": "^7.51.5"
   }
 }
