--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -16,6 +16,7 @@
     "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
+    "@hookform/resolvers": "^3.6.0",
     "@mantine/core": "^7.6.1",
     "@mantine/dates": "^7.6.1",
     "@mantine/dropzone": "^7.6.1",
@@ -33,7 +34,9 @@
     "next": "^14.0.4",
     "pretendard": "^1.3.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@hcc/eslint-config": "workspace:*",
