--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,10 +7,11 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "build": "tsc"
+    "build": "vite build"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query-devtools": "^5.17.21",
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -20,6 +21,9 @@
     "@hcc/typescript-config": "workspace:*",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3"
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.2.12",
+    "vite-plugin-dts": "4.0.0-beta.1"
   }
 }
