--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,10 +1,5 @@
 {
-  "extends": "@hcc/typescript-config/react-library.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "module": "ESNext",
-    "moduleResolution": "bundler"
-  },
-  "include": ["src", "turbo"],
-  "exclude": ["node_modules", "dist"]
+  "extends": "@hcc/typescript-config/vite-library.json",
+  "include": ["src", "vite.config.ts", "src/vite-env.d.ts"
+  ]
 }
