--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
-  "globalEnv": ["NEXT_PUBLIC_*", "NODE_ENV"],
+  "globalEnv": ["NEXT_PUBLIC_*", "NODE_ENV", "VITE_*"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
