--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -13,9 +13,9 @@
     "**/*.{ts,tsx}": "eslint --fix --max-warnings 0"
   },
   "dependencies": {
+    "@hcc/api": "workspace:*",
     "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
-    "@hcc/api": "workspace:*",
     "@hcc/ui": "workspace:*",
     "@hookform/resolvers": "^3.6.0",
     "@mantine/core": "^7.6.1",
@@ -32,6 +32,7 @@
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "framer-motion": "^11.0.5",
     "next": "^14.0.4",
     "pretendard": "^1.3.9",
     "react": "^18.2.0",
