--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -16,10 +16,10 @@
     "@amplitude/analytics-browser": "^2.6.1",
     "@egjs/react-conveyer": "^1.7.1",
     "@egjs/react-flicking": "^3.8.3",
+    "@hcc/api": "workspace:*",
     "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
-    "@hcc/api": "workspace:*",
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.21",
@@ -27,6 +27,7 @@
     "@vanilla-extract/css-utils": "^0.1.3",
     "@vanilla-extract/dynamic": "^2.1.0",
     "@vercel/analytics": "^1.1.2",
+    "@vercel/speed-insights": "^1.0.14",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.5",
