--- a/apps/spectator/tsconfig.json
+++ b/apps/spectator/tsconfig.json
@@ -13,7 +13,7 @@
   },
   "include": [
     "next-env.d.ts",
-    "next.config",
+    "next.config.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
