--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -2,10 +2,19 @@
   "name": "@hcc/styles",
   "version": "0.0.0",
   "private": true,
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "sideEffects": false,
   "type": "module",
+  "exports": {
+    ".": {
+      "default": "./dist/index.js",
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./globals": {
+      "default": "./dist/globals.css.js",
+      "import": "./dist/globals.css.js",
+      "types": "./dist/globals.css.d.ts"
+    }
+  },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "build": "tsc"
@@ -16,17 +25,16 @@
       "eslint --fix --max-warnings 0"
     ]
   },
+  "dependencies": {
+    "@vanilla-extract/css": "^1.17.1"
+  },
   "devDependencies": {
     "@hcc/eslint-config": "workspace:*",
     "@hcc/typescript-config": "workspace:*",
-    "@turbo/gen": "^1.13.4",
     "@types/node": "^22.13.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "react": "^19.0.0",
     "typescript": "^5.7.3"
-  },
-  "dependencies": {
-    "@vanilla-extract/css": "^1.17.1"
   }
 }
