--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "next": "^15.1.7"
   },
   "devDependencies": {
     "@hcc/eslint-config": "workspace:*",
@@ -23,5 +24,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "typescript": "^5.7.3"
+  },
+  "peerDependencies": {
+    "next": "^13 || ^14 || ^15"
   }
 }
