--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --port 3000 --hostname 0.0.0.0",
+    "dev": "next dev --port 3001 -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --max-warnings 0"
@@ -14,7 +14,6 @@
     "**/*.{ts,tsx}": "eslint --fix --max-warnings 0"
   },
   "dependencies": {
-    "@amplitude/analytics-browser": "^2.11.11",
     "@egjs/react-conveyer": "^1.7.1",
     "@egjs/react-flicking": "^3.8.3",
     "@hcc/api": "workspace:*",
@@ -24,7 +23,6 @@
     "@next/third-parties": "^15.1.6",
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-query-devtools": "^5.66.0",
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/css-utils": "^0.1.4",
     "@vanilla-extract/dynamic": "^2.1.2",
