--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -19,6 +19,7 @@
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
     "@hookform/resolvers": "^3.10.0",
+    "@sentry/nextjs": "^8",
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/css-utils": "^0.1.4",
     "@vanilla-extract/recipes": "^0.5.5",
