--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -20,18 +20,19 @@
     "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
-    "@next/third-parties": "^15.1.6",
+    "@next/third-parties": "^15.1.7",
+    "@sentry/nextjs": "^8.55.0",
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.66.0",
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/css-utils": "^0.1.4",
     "@vanilla-extract/dynamic": "^2.1.2",
-    "@vercel/analytics": "^1.4.1",
-    "@vercel/speed-insights": "^1.1.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
-    "framer-motion": "^12.0.6",
-    "next": "^15.1.6",
+    "framer-motion": "^12.4.3",
+    "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -39,10 +40,10 @@
     "@hcc/eslint-config": "workspace:*",
     "@hcc/typescript-config": "workspace:*",
     "@types/gtag.js": "^0.0.18",
-    "@types/node": "^22.13.0",
+    "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@vanilla-extract/next-plugin": "^2.4.9",
+    "@vanilla-extract/next-plugin": "^2.4.10",
     "clsx": "^2.1.1",
     "typescript": "^5.7.3"
   }
