--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -32,7 +32,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.2",
     "dayjs": "^1.11.13",
-    "framer-motion": "^12.4.10",
+    "motion": "^12.4.10",
     "next": "^15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
