--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,7 +28,7 @@
     "@vanilla-extract/css": "^1.17.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "framer-motion": "^11.18.2",
+    "motion": "^12.4.10",
     "react-calendar": "^5.1.0",
     "react-hook-form": "^7.54.2",
     "vaul": "^1.1.2"
