--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,15 +20,15 @@
   "dependencies": {
     "@hcc/icons": "workspace:^",
     "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-dialog": "^1.1.5",
-    "@radix-ui/react-popover": "^1.1.5",
-    "@radix-ui/react-select": "^2.1.5",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "@vanilla-extract/css": "^1.17.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "framer-motion": "^11.18.2",
+    "motion": "^12.4.10",
     "react-calendar": "^5.1.0",
     "react-hook-form": "^7.54.2",
     "vaul": "^1.1.2"
@@ -38,14 +38,14 @@
     "@hcc/styles": "workspace:^",
     "@hcc/typescript-config": "workspace:*",
     "@turbo/gen": "^1.13.4",
-    "@types/node": "^22.13.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@types/uuid": "^9.0.8",
     "@vanilla-extract/recipes": "^0.5.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.2",
     "uuid": "^9.0.1"
   }
 }
