--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -14,26 +14,27 @@
     "**/*.{ts,tsx}": "eslint --fix --max-warnings 0"
   },
   "dependencies": {
-    "@bprogress/next": "^3.2.6",
+    "@bprogress/next": "^3.2.10",
     "@egjs/react-conveyer": "^1.7.1",
     "@egjs/react-flicking": "^3.8.3",
     "@hcc/api": "workspace:*",
     "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
-    "@next/third-parties": "^15.2.1",
+    "@next/third-parties": "^15.2.3",
     "@sentry/nextjs": "^8.55.0",
     "@stomp/stompjs": "^7.0.1",
-    "@tanstack/react-query": "^5.67.2",
+    "@suspensive/react": "^3.0.0-next.12",
+    "@tanstack/react-query": "^5.69.0",
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/css-utils": "^0.1.4",
     "@vanilla-extract/dynamic": "^2.1.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "axios": "^1.8.2",
+    "axios": "^1.8.4",
     "dayjs": "^1.11.13",
-    "motion": "^12.4.10",
-    "next": "^15.2.1",
+    "motion": "^12.5.0",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -42,7 +43,7 @@
     "@hcc/typescript-config": "workspace:*",
     "@types/gtag.js": "^0.0.18",
     "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vanilla-extract/next-plugin": "^2.4.10",
     "clsx": "^2.1.1",
