--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -14,39 +14,39 @@
     "**/*.{ts,tsx}": "eslint --fix --max-warnings 0"
   },
   "dependencies": {
-    "@bprogress/next": "^3.2.10",
-    "@egjs/react-conveyer": "^1.7.1",
+    "@bprogress/next": "^3.2.12",
+    "@egjs/react-conveyer": "^1.8.0",
     "@egjs/react-flicking": "^3.8.3",
     "@hcc/api": "workspace:*",
     "@hcc/icons": "workspace:^",
     "@hcc/styles": "workspace:*",
     "@hcc/ui": "workspace:*",
-    "@next/third-parties": "^15.2.3",
+    "@next/third-parties": "^15.3.2",
     "@sentry/nextjs": "^8.55.0",
-    "@stomp/stompjs": "^7.0.1",
-    "@suspensive/react": "^3.0.0-next.12",
-    "@tanstack/react-query": "^5.69.0",
-    "@vanilla-extract/css": "^1.17.1",
+    "@stomp/stompjs": "^7.1.1",
+    "@suspensive/react": "^3.2.1",
+    "@tanstack/react-query": "^5.76.1",
+    "@vanilla-extract/css": "^1.17.2",
     "@vanilla-extract/css-utils": "^0.1.4",
-    "@vanilla-extract/dynamic": "^2.1.2",
+    "@vanilla-extract/dynamic": "^2.1.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "dayjs": "^1.11.13",
-    "motion": "^12.5.0",
-    "next": "^15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "motion": "^12.12.1",
+    "next": "^15.3.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@hcc/eslint-config": "workspace:*",
     "@hcc/typescript-config": "workspace:*",
     "@types/gtag.js": "^0.0.18",
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "@vanilla-extract/next-plugin": "^2.4.10",
+    "@types/node": "^22.15.18",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "@vanilla-extract/next-plugin": "^2.4.11",
     "clsx": "^2.1.1",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   }
 }
