--- a/packages/api-base/package.json
+++ b/packages/api-base/package.json
@@ -34,6 +34,8 @@
     "react-dom": "^19.1.1"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-query-devtools": "^5.84.1",
     "ky": "^1.8.2"
   },
   "devDependencies": {
