--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,8 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.1.4/schema.json",
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.json"],
+    "includes": ["**/*.ts", "**/*.tsx", "**/*.json"],
     "experimentalScannerIgnores": [
       "node_modules/**",
       "dist/**",
