--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -19,6 +19,7 @@
     "@bprogress/next": "^3.2.12",
     "@hcc/api-base": "workspace:*",
     "@hcc/icons": "workspace:*",
+    "@lukemorales/query-key-factory": "^1.3.4",
     "@vercel/analytics": "^1.5.0",
     "next": "^15.4.6",
     "react": "^19.1.1",
