feat: update Badge component to support medium size and default variant colors

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,7 +26,7 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
-    "./index.css": {
+    "./styles.css": {
       "import": "./dist/index.css"
     }
   },
