--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "biome lint .",
+    "lint:fix": "biome lint --fix .",
     "format": "biome format --write ."
   },
   "lint-staged": {
@@ -19,6 +20,8 @@
     "@bprogress/next": "^3.2.12",
     "@hcc/api-base": "workspace:*",
     "@hcc/icons": "workspace:*",
+    "@hcc/ui": "workspace:*",
+    "@lukemorales/query-key-factory": "^1.3.4",
     "@vercel/analytics": "^1.5.0",
     "next": "^15.4.6",
     "react": "^19.1.1",
