--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
-    "clsx": "^2.1.1"
+    "clsx": "^2.1.1",
+    "ts-pattern": "^5.8.0"
   }
 }
