--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,6 +45,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@hcc/icons": "workspace:*",
     "@radix-ui/react-slot": "^1.2.3",
     "clsx": "^2.1.1",
     "sonner": "^2.0.7",
