--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -20,9 +20,10 @@
     "@bprogress/next": "^3.2.12",
     "@hcc/api-base": "workspace:*",
     "@hcc/icons": "workspace:*",
-    "@hcc/ui": "workspace:*",
     "@hcc/style": "workspace:*",
+    "@hcc/ui": "workspace:*",
     "@lukemorales/query-key-factory": "^1.3.4",
+    "@suspensive/react": "^3.5.0",
     "@vercel/analytics": "^1.5.0",
     "next": "^15.4.6",
     "react": "^19.1.1",
