--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -21,9 +21,10 @@
     "@hcc/api-base": "workspace:*",
     "@hcc/icons": "workspace:*",
     "@hcc/style": "workspace:*",
+    "@hcc/toolkit": "workspace:*",
     "@hcc/ui": "workspace:*",
     "@lukemorales/query-key-factory": "^1.3.4",
-    "@suspensive/react": "^3.5.0",
+    "@suspensive/react": "^3.6.0",
     "@vercel/analytics": "^1.5.0",
     "next": "^15.4.6",
     "react": "^19.1.1",
@@ -31,11 +32,11 @@
   },
   "devDependencies": {
     "@hcc/typescript-config": "workspace:*",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^22.17.0",
-    "@types/react": "^19.1.9",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/node": "^22.17.2",
+    "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2"
   }
 }
