--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hcc/api-base",
+  "name": "@hcc/toolkit",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,7 +7,9 @@
     "dev": "node build.js --watch",
     "start": "next start",
     "lint": "biome lint .",
-    "format": "biome format --write ."
+    "format": "biome format --write .",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -15,6 +17,7 @@
       "biome format --write"
     ]
   },
+  "sideEffects": false,
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
@@ -24,6 +27,9 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
+    },
+    "./styles.css": {
+      "import": "./dist/index.css"
     }
   },
   "files": [
@@ -33,16 +39,15 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
-  "dependencies": {
-    "@tanstack/react-query": "^5.85.3",
-    "@tanstack/react-query-devtools": "^5.85.3",
-    "ky": "^1.8.2"
-  },
   "devDependencies": {
     "@hcc/typescript-config": "workspace:*",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "esbuild": "^0.25.9",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.13"
   }
 }
