--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/2.1.4/schema.json",
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**/*.ts", "**/*.tsx", "**/*.json"],
+    "includes": ["**/*.ts", "**/*.tsx", "**/*.json", "**/*.js"],
     "experimentalScannerIgnores": [
       "node_modules/**",
       "dist/**",
