--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**/*.ts", "**/*.tsx", "**/*.json", "**/*.js"],
+    "includes": ["**/*.ts", "**/*.tsx", "**/*.json", "**/*.js", "!**/*.spec.ts", "!**/*.test.ts"],
     "experimentalScannerIgnores": [
       "node_modules/**",
       "dist/**",
