--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@hcc/icons": "workspace:*",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "clsx": "^2.1.1",
     "sonner": "^2.0.7",
