--- a/apps/manager/package.json
+++ b/apps/manager/package.json
@@ -28,7 +28,9 @@
     "@vercel/analytics": "^1.5.0",
     "next": "^15.4.6",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@hcc/typescript-config": "workspace:*",
