--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -25,7 +25,8 @@
     "@vercel/analytics": "^1.5.0",
     "next": "^15.5.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@hcc/typescript-config": "workspace:*",
