--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -21,6 +21,7 @@
     "@hcc/icons": "workspace:*",
     "@hcc/style": "workspace:*",
     "@hcc/ui": "workspace:*",
+    "@lukemorales/query-key-factory": "^1.3.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@vercel/analytics": "^1.5.0",
     "next": "^15.5.2",
