--- a/apps/spectator/package.json
+++ b/apps/spectator/package.json
@@ -17,14 +17,17 @@
   },
   "dependencies": {
     "@bprogress/next": "^3.2.12",
+    "@egjs/conveyer": "^1.8.0",
     "@hcc/api-base": "workspace:*",
     "@hcc/icons": "workspace:*",
     "@hcc/style": "workspace:*",
     "@hcc/ui": "workspace:*",
     "@lukemorales/query-key-factory": "^1.3.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@suspensive/react": "^3.6.0",
     "@vercel/analytics": "^1.5.0",
     "next": "^15.5.2",
+    "nuqs": "^2.5.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1"
